mentor pannel pdf uloading done

--- a/Registration.html
+++ b/Registration.html
@@ -216,7 +216,7 @@
 
                                             <label>
                                                 Linkedin URL *
-                                                <input type="text" name="LinkedinURL_Mentor" required>
+                                                <input type="text" name="linkedin" required>
                                             </label>
                                             <label>
                                                 Number of active Months *
@@ -448,7 +448,8 @@
                         <p><i class="fa fa-map-marker-alt me-3"></i>16, GOLAGHATA ROAD
                             Kolkata - 700048
                             <br>
-                            West Bengal - India</p>
+                            West Bengal - India
+                        </p>
                         <p><i class="fa fa-phone-alt me-3"></i>+91 93391 19671</p>
                         <p><i class="fa fa-envelope me-6"></i>consult.pragya@gmail.com</p>
                         <div class="d-flex pt-2">
