--- a/admin/index.html
+++ b/admin/index.html
@@ -171,7 +171,7 @@
                         <div class="dp-part">
                             <div class="text-part">
                                 <p>SignUp</p>
-                                <p>10</p>
+                                <p id="signUp">10</p>
                             </div>
                         </div>
                     </div>
@@ -179,7 +179,7 @@
                         <div class="dp-part">
                             <div class="text-part">
                                 <p>Registered People</p>
-                                <p>7</p>
+                                <p id="registerd">7</p>
                             </div>
                         </div>
                     </div>
@@ -187,7 +187,7 @@
                         <div class="dp-part">
                             <div class="text-part">
                                 <p>Startups</p>
-                                <p>5</p>
+                                <p id="startUp">5</p>
                             </div>
                         </div>
                     </div>
@@ -195,7 +195,7 @@
                         <div class="dp-part">
                             <div class="text-part">
                                 <p>Mentors</p>
-                                <p>2</p>
+                                <p id="mentor">2</p>
                             </div>
                         </div>
                     </div>
