subscribe and signUp intrigated

--- a/contact.html
+++ b/contact.html
@@ -33,6 +33,9 @@
 
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
+    <!--  toastify  -->
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 </head>
 
 <body>
@@ -196,7 +199,8 @@
                         <p><i class="fa fa-map-marker-alt me-3"></i>16, GOLAGHATA ROAD
                             Kolkata - 700048
                             <br>
-                            West Bengal - India</p>
+                            West Bengal - India
+                        </p>
                         <p><i class="fa fa-phone-alt me-3"></i>+91 93391 19671</p>
                         <p><i class="fa fa-envelope me-6"></i>consult.pragya@gmail.com</p>
                         <div class="d-flex pt-2">
