copy text seted

--- a/admin/index.html
+++ b/admin/index.html
@@ -212,6 +212,10 @@
                 </div>
                 <div class="work-heading" style="display: block;">
                     <h2>Emails for sending newsletter</h2>
+                    <div id="subscribed email">
+
+                    </div>
+
                     <textarea id="copyText">abc@gmail.com, xyz@gmail.com, cake@gmail.com, etc....</textarea>
                     <br>
                     <button onclick="copy()">Copy</button>
