resume and cv both added

--- a/admin/applicants.html
+++ b/admin/applicants.html
@@ -171,6 +171,7 @@
               <thead style="border: 1px solid black; ">
                 <th style="text-align: center;">Name</th>
                 <th style="text-align: center;">download Resume / Remove</th>
+                <th style="text-align: center;">download cv / Remove</th>
                 <th style="text-align: center;">Job Type</th>
                 <!-----------------Sort BY date applied------------------>
                 <th style="text-align: center;">Date Applied [d/m/y]</th>
