--- a/admin/applicants.html
+++ b/admin/applicants.html
@@ -170,6 +170,7 @@
               style="width:100%; border: 1px solid black; margin-top: 1rem; padding: 0px, 10px; text-align: center;">
               <thead style="border: 1px solid black; ">
                 <th style="text-align: center;">Name</th>
+                <th style="text-align: center;">Email</th>
                 <th style="text-align: center;">download Resume / Remove</th>
                 <th style="text-align: center;">download cv / Remove</th>
                 <th style="text-align: center;">Job Type</th>
