--- a/admin/applicants.html
+++ b/admin/applicants.html
@@ -15,6 +15,11 @@
   <!-- TABLE LINKS -->
   <!---------- CHECK ASSETS ONCE IT has JS files MAY include Backend ALSO --------------->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.4.1/css/bootstrap.min.css">
+
+  <!--  toastify  -->
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+
   <style>
     .bg_colour {
       background-repeat: no-repeat;
