edit details done

--- a/admin/Edit.html
+++ b/admin/Edit.html
@@ -157,10 +157,10 @@
 
                             <form id="searchForm" class="form-inline d-flex p-2 d-flex justify-content-center">
                                 <div class="form-group mx-sm-3 mb-2">
-                                    <label for="searchField" class="sr-only">User Name:</label>
+                                    <label for="uniqueId" class="sr-only">User Name:</label>
                                     <!-- pattern="[a-zA-Z]+[0-9]+"
                                     title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters" -->
-                                    <input type="text" name="searchEmil" id="searchField" class="form-control"
+                                    <input type="text" name="searchEmil" id="uniqueId" class="form-control"
                                         placeholder=" searchBy unique Id">
                                 </div>
                                 <div class="centerr">
@@ -430,6 +430,11 @@
 
 
                             </form>
+
+
+                            <!-- ---------------------------sstartup form end------------------------------- -->
+
+
                             <div class="documents">
                                 <table style="width:100%; border: 1px solid black; margin-top: 1rem;">
                                     <thead style="border: 1px solid black;">
@@ -444,151 +449,9 @@
                                 </table>
                             </div>
 
-                            <!-- <form id="ft-form" style="display: none;" class="startupForm">
-                                <div class="">
 
 
-                                    <fieldset>
-                                        <label>
-                                            Startup Name *
-                                            <input type="text" name="startupName" id="startupName" required>
-                                        </label>
 
-                                        <div class="two-cols">
-                                            <label>
-                                                StartUp Email
-                                                <input type="email" name="email" required>
-                                            </label>
-
-                                            <label>
-                                                Phone *
-                                                <input type="tel" name="sturtupPhone" required>
-                                            </label>
-                                        </div>
-                                        <div class="two-cols">
-                                            <label>
-                                                Registered State
-                                                <input type="text" name="Citizenship">
-                                            </label>
-                                            <label>
-                                                Registered City
-                                                <input type="text" name="City">
-                                            </label>
-                                        </div>
-                                        <label>
-                                            Company URL
-                                            <input type="text" name="Address">
-                                        </label>
-                                        <div class="two-cols">
-
-                                            <label>
-                                                Industry *
-                                                <input type="text" name="Industry" required>
-                                            </label>
-                                            <label>
-                                                Sector *
-                                                <input type="text" name="Sector" required>
-                                            </label>
-                                        </div>
-                                        <label>
-                                            Services *
-                                            <input type="text" name="Services" required>
-                                        </label>
-                                        <label>
-                                            MSME Certificate Number
-                                            <input type="text" name="Certificate">
-                                        </label>
-                                        <label>
-                                            Profile Picture
-                                            <input type="file" name="Photo" accept=".jpg, .jpeg" id="sturtupFile">
-                                        </label>
-
-                                        <div class="two-cols">
-                                            <label for="cars">Is this Company logo</label>
-                                            <select name="logo" id="cars">
-                                                <option value="no">No</option>
-                                                <option value="yes">Yes</option>
-                                            </select>
-                                            <label for="cars">Stage of Startup *</label>
-                                            <select name="Stage" id="cars" required>
-                                                <option value="ideation">ideation</option>
-                                                <option value="validation">validation</option>
-                                                <option value="early traction">Early Traction</option>
-                                                <option value="Scaling">Scaling</option>
-                                            </select>
-                                        </div>
-                                        <label for="cars">Nature Of the Entity</label>
-                                        <select name="NatureOfEntity" id="cars">
-                                            <option value="no">Private Limited Company</option>
-                                            <option value="yes">Limited Liability Partnership</option>
-                                            <option value="yes">Registered Partnership</option>
-                                        </select>
-                                        <label for="cars">Funded / Bootstrapped</label>
-                                        <select name="Money Source" id="cars">
-                                            <option value="funded">Funded</option>
-                                            <option value="bootstrapped">Bootstrapped</option>
-                                        </select>
-                                        <div class="two-cols">
-
-                                            <label>
-                                                CIN
-                                                <input type="text" name="CIN">
-                                            </label>
-                                            <label>
-                                                PAN
-                                                <input type="text" name="PAN">
-                                            </label>
-                                        </div>
-                                        <label>
-                                            Brief about Startup *
-                                            <input type="text" name="Brief" required>
-                                        </label>
-                                        <label for="cars">You Are Intrested In * </label>
-                                        <select name="Interests" id="cars" required>
-                                            <option value="All">All</option>
-                                            <option value="Mentors">Mentors</option>
-                                            <option value="Incubators">Incubators</option>
-                                            <option value="Accelerators">Accelerators</option>
-                                            <option value="Investors">Investors</option>
-                                        </select>
-
-                                    </fieldset>
-
-                                    <div class="btns">
-                                       
-                                        <input type="submit" value="Submit application">
-                                    </div>
-                                </div>
-
-
-                            </form> 
-                            <div class="documents">
-                                <table style="width:100%; border: 1px solid black; margin-top: 1rem;">
-                                    <tr style="border: 1px solid black;">
-                                      <th>Documents Available</th>
-                                      <th>View</th>
-                                    </tr>
-                                    <tr>
-                                      <td>tax info.pdf</td>
-                                      <td>
-                                        <i class="fa fa-download" aria-hidden="true"></i>
-                                        <i style="margin-left: 1rem;" class="fa fa-times" aria-hidden="true"></i>
-                                    </td>
-                                    </tr>
-                                    <tr>
-                                      <td>Payment.pdf</td>
-                                      <td>
-                                        <i class="fa fa-download" aria-hidden="true"></i>
-                                        <i style="margin-left: 1rem;" class="fa fa-times" aria-hidden="true"></i>
-
-                                    </td>
-                                    </tr>
-                                </table>
-                            </div>
-                            -->
-
-
-                            <!-- ---------------------------sstartup form end------------------------------- -->
 
 
                         </div>
