--- a/admin/applicants.html
+++ b/admin/applicants.html
@@ -78,6 +78,7 @@
           </li>
           <li>
             <i class="fa fa-info-circle coral" aria-hidden="true"></i>
+            <!-- <a href="./editdetails.html">Details</a> -->
             <a href="./editdetails.html">Details</a>
           </li>
 
