--- a/index.html
+++ b/index.html
@@ -654,7 +654,7 @@
         <!-- Team End -->
 
         <!-- Footer Start -->
-        <div class="container-fluid bg-primary text-light footer mt-5 pt-5 wow fadeIn circle-animationn triangle-animationn"
+        <div class="container-fluid bg-primary text-light footer mt-5 pt-5 wow fadeIn triangle-animation circle-animation"
             data-wow-delay="0.1s">
             <div class="container py-5 px-lg-5">
                 <div class="row g-5">
@@ -678,27 +678,26 @@
                             </a>
                         </div>
                     </div>
-                </div>
-                <div class="col-md-6 col-lg-3">
-                    <h5 class="text-white mb-4">Popular Link</h5>
-                    <a class="btn btn-link" href="https://msme.gov.in/">MSME</a>
-                    <a class="btn btn-link" href="team.html">Contact Us</a>
-                    <!--
+                    <div class="col-md-6 col-lg-3">
+                        <h5 class="text-white mb-4">Popular Link</h5>
+                        <a class="btn btn-link" href="https://msme.gov.in/">MSME</a>
+                        <a class="btn btn-link" href="team.html">Contact Us</a>
+                        <!--
 
                             <a class="btn btn-link" href="">Privacy Policy</a>
                             <a class="btn btn-link" href="">Terms & Condition</a>
                         -->
-                    <a class="btn btn-link" href="career.html">Career</a>
-                </div>
+                        <a class="btn btn-link" href="career.html">Career</a>
+                    </div>
 
-                <div class="col-md-6 col-lg-3">
-                    <h5 class="text-white mb-4">Visitors</h5>
+                    <div class="col-md-6 col-lg-3">
+                        <h5 class="text-white mb-4">Visitors</h5>
+                        <div id="google_translate_element"></div>
 
-                    <div id="google_translate_element"></div>
-                    <!--
-                        <div class="row g-2">
-                            <div class="col-4">
-                                <img class="img-fluid" src="img/portfolio-1.jpg" alt="Image">
+                        <!--
+                            <div class="row g-2">
+                                <div class="col-4">
+                                    <img class="img-fluid" src="img/portfolio-1.jpg" alt="Image">
                             </div>
                             <div class="col-4">
                                 <img class="img-fluid" src="img/portfolio-2.jpg" alt="Image">
@@ -717,62 +716,60 @@
                             </div>
                         </div>
                     -->
-                    <a href="https://info.flagcounter.com/lzyD"><img
-                            src="https://s01.flagcounter.com/count/lzyD/bg_FFFFFF/txt_000000/border_CCCCCC/columns_2/maxflags_20/viewers_3/labels_1/pageviews_0/flags_0/percent_0/"
-                            alt="Flag Counter" border="0"></a>
-                </div>
-                <div class="col-md-6 col-lg-3">
-                    <h5 class="text-white mb-4">Visit Our Office</h5>
-                    <div class="position-relative w-100 mt-3">
-                        <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14734.120003072445!2d88.39084748883161!3d22.59667536388648!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a027609ac26dc25%3A0x2b04a8cbea9694ae!2s16%2C%20Golaghata%20Rd%2C%20Sreebhumi%2C%20Dakshindari%2C%20Kolkata%2C%20West%20Bengal%20700048!5e0!3m2!1sen!2sin!4v1678528923980!5m2!1sen!2sin"
-                            width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy"
-                            referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        <a href="https://info.flagcounter.com/lzyD"><img
+                                src="https://s01.flagcounter.com/count/lzyD/bg_FFFFFF/txt_000000/border_CCCCCC/columns_2/maxflags_20/viewers_3/labels_1/pageviews_0/flags_0/percent_0/"
+                                alt="Flag Counter" border="0"></a>
+
+                    </div>
+                    <div class="col-md-6 col-lg-3">
+                        <h5 class="text-white mb-4">Visit Our Office</h5>
+                        <div class="position-relative w-100 mt-3">
+                            <iframe
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14734.120003072445!2d88.39084748883161!3d22.59667536388648!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a027609ac26dc25%3A0x2b04a8cbea9694ae!2s16%2C%20Golaghata%20Rd%2C%20Sreebhumi%2C%20Dakshindari%2C%20Kolkata%2C%20West%20Bengal%20700048!5e0!3m2!1sen!2sin!4v1678528923980!5m2!1sen!2sin"
+                                width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy"
+                                referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="container px-lg-5">
-            <div class="copyright">
-                <div class="row">
-                    <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                        &copy; <a class="border-bottom" href="index.html">Q Stratups Private Limited</a>, All
-                        Right
-                        Reserved.
+            <div class="container px-lg-5">
+                <div class="copyright">
+                    <div class="row">
+                        <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
+                            &copy; <a class="border-bottom" href="index.html">Q Stratups Private Limited</a>, All Right
+                            Reserved.
 
-                        <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-                        <br>
-                        <div class="hider" style="color: #a3c0d4;">
-                            Designed By <a style="color: #a3c0d4;" class="border-bottom-black"
-                                href="https://htmlcodex.com">HTML Codex</a>
+                            <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
+                            <br>
+                            <div class="hider" style="color: #a3c0d4;">
+                                Designed By <a style="color: #a3c0d4;" class="border-bottom-black"
+                                    href="https://htmlcodex.com">HTML Codex</a>
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-md-6 text-center text-md-end">
-                        <div class="footer-menu">
-                            <a href="index.html">Home</a>
-                            <!--
+                        <div class="col-md-6 text-center text-md-end">
+                            <div class="footer-menu">
+                                <a href="index.html">Home</a>
+                                <!--
 
                                     <a href="">Cookies</a>
                                     <a href="">Help</a>
                                     <a href="">FQAs</a>
                                 -->
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </div>
-    <!--
 
-                <div class="circle">
-                    <img src="/img/circle.png" alt="">
-                </div>
-                <div class="triangle">
-                    <img src="/img/triangle-pic-removebg-preview.png" alt="">
-                </div>
-            -->
-    </div>
-    <!-- Footer End -->
+            <div class="circle">
+                <img src="/img/circle.png" alt="">
+            </div>
+            <div class="triangle">
+                <img src="/img/triangle-pic-removebg-preview.png" alt="">
+            </div>
+        </div>
+        <!-- Footer End -->
+
 
 
     <!-- Back to Top -->
