fixes & design Admin panel

--- a/admin/Edit.html
+++ b/admin/Edit.html
@@ -44,6 +44,7 @@
         .bg_colour {
             background-repeat: no-repeat;
             background-size: cover;
+            height: 100%;
             background-image: url("https://img.freepik.com/free-photo/vivid-blurred-colorful-wallpaper-background_58702-3798.jpg");
         }
     </style>
@@ -184,7 +185,7 @@
                                     </div>
                                 </fieldset> -->
 
-                                <div class="">
+                                <div class="" style="color: black;">
                                     <!-- red box -->
                                     <fieldset>
                                         <label>
@@ -314,7 +315,7 @@
                             <!-- <form id="ft-form" style="display: none;" class="startupForm"> -->
 
                             <form id="ft-form" style="display: none;" class="startupForm">
-                                <div class="">
+                                <div class="" style="color: black;">
 
                                     <fieldset>
                                         <label>
@@ -435,7 +436,7 @@
                             <!-- ---------------------------sstartup form end------------------------------- -->
 
 
-                            <div class="documents">
+                            <div class="documents" style="color: black;">
                                 <table style="width:100%; border: 1px solid black; margin-top: 1rem;">
                                     <thead style="border: 1px solid black;">
                                         <th>Documents Available</th>
