--- a/admin/index.html
+++ b/admin/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin Area</title>
+    <title>Admin Panel</title>
     <!-- google fonts link here -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,6 +20,7 @@
         .bg_colour {
             background-repeat: no-repeat;
             background-size: cover;
+            height: 100%;
             background-image: url("https://img.freepik.com/free-photo/vivid-blurred-colorful-wallpaper-background_58702-3798.jpg");
         }
         .btnTOcopy{
@@ -156,15 +157,9 @@
 
             <div class="profile">
 
-                <div class="user-profilee">
-
-                    <i class="fa-solid fa-user"></i>
-
-                </div>
-
                 <div class="user-name">
 
-                    <h2>Admin</h2> &nbsp; &nbsp;
+                    <h2>Admin Panel</h2> &nbsp; &nbsp;
                 </div>
 
             </div>
@@ -229,7 +224,7 @@
                     <h2>Emails for sending newsletter</h2>
                     <div id="subscribed email"></div>
                     <div style="display: flex; justify-content: center;">
-                        <textarea style="min-height: 10rem; min-width: 50rem;" id="copyText"> loading all emails...</textarea>
+                        <textarea class="txtarea" id="copyText"> loading all emails...</textarea>
                         <br>
                         <button class="btnTOcopy" id="copyBtn" onclick="copy()">Copy</button>
                     </div>
