--- a/career.html
+++ b/career.html
@@ -219,18 +219,18 @@
                                     <div class="two-cols">
                                         <label>
                                             Resume
-                                            <input type="file" name="resume" id="resume" accept=".pdf">
+                                            <input type="file" name="resume" id="resume" accept=".pdf" required>
                                         </label>
                                         <label>
                                             Curriculum vitae
-                                            <input type="file" name="cv" accept=".pdf">
+                                            <input type="file" name="cv" accept=".pdf" required>
                                         </label>
                                     </div>
                                     <p>Possible file types: PDF. Maximum file size: 5 MB.</p>
                                 </fieldset>
                                 <div class="btns">
 
-                                    <input type="submit" value="Submit application">
+                                    <input id="submitInput" type="submit" value="Submit application">
                                 </div>
                             </form>
                         </div>
